--- a/home/templates/home/calibrate.html
+++ b/home/templates/home/calibrate.html
@@ -6,11 +6,16 @@
     <title>Calibrate - Air Pollution Monitoring</title>
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
 </head>
+<style>
+    #navBar, #footer {
+        background-color: #002F5E;
+    }
+</style>
 <body class="bg-gray-100">
-    <nav class="bg-white border-gray-200 dark:bg-gray-900">
+    <nav id="navBar" class="border-gray-200 dark:bg-gray-900">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Air Pollution Monitoring</span>
+                <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Air Pollution Monitoring</span>
             </a>
             <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
                 <span class="sr-only">Open main menu</span>
@@ -19,18 +24,18 @@
                 </svg>
             </button>
             <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-                <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+                <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0  dark:border-gray-700">
                     <li>
-                        <a href="{% url 'home' %}" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
+                        <a href="{% url 'home' %}" class="block py-2 px-3 bg-blue-700 rounded md:bg-transparent md:p-0 text-blue-400" aria-current="page">Home</a>
                     </li>
                     <li>
-                        <a href="{% url 'calibrate' %}" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Calibrate</a>
+                        <a href="{% url 'calibrate' %}" class="block py-2 px-3 bg-blue-700 rounded md:bg-transparent md:p-0 text-blue-400" aria-current="page">Calibrate</a>
                     </li>
                     <li>
-                        <a href="{% url 'connection' %}" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Connections</a>
+                        <a href="{% url 'connection' %}" class="block py-2 px-3  bg-blue-700 rounded md:bg-transparent md:p-0 text-blue-400" aria-current="page">Connections</a>
                     </li>
                     <li>
-                        <a href="{% url 'logout' %}" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Logout</a>
+                        <a href="{% url 'logout' %}" class="block py-2 px-3  bg-blue-700 rounded md:bg-transparent md:p-0 text-blue-400" aria-current="page">Logout</a>
                     </li>
                 </ul>
             </div>
@@ -61,6 +66,17 @@
         </a>
     </div>
     
-
+    <footer id="footer" class="fixed bottom-0 left-0 z-20 w-full p-4 bg-white border-t border-gray-200 shadow md:flex md:items-center md:justify-between md:p-4 dark:bg-gray-800 dark:border-gray-600">
+        <span class="text-sm text-white sm:text-center">© 2025 <a href="https://flowbite.com/" class="hover:underline">Air Pollution Monitoring | AMA University & Baranggay Baesa</a>. All Rights Reserved.
+        </span>
+        <div class="flex flex-row md:mb-0">
+            <a href="" class="flex items-center">
+                <img src="https://i.imgur.com/zKftcMV.png" class="h-16 me-3" alt="FlowBite Logo" />
+            </a>
+            <a href="" class="flex items-center">
+                <img src="https://i.imgur.com/mkTipwZ.png" class="h-16 me-3" alt="FlowBite Logo" />
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
