--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -32,7 +32,7 @@
     <div class="max-w-md mx-auto justify-center items-center min-h-screen mt-8 p-6 bg-white shadow-lg rounded-lg content">
         <!-- Center logo -->
         <a href="" class="flex justify-center items-center mx-auto mb-6">
-            <img src="https://i.imgur.com/zKftcMV.png" class="h-16" alt="FlowBite Logo" />
+            <img src="https://i.imgur.com/mkTipwZ.png" class="h-16" alt="FlowBite Logo" />
         </a>
         <h2 class="text-2xl font-semibold text-center text-gray-900 mb-6">Login to Monitoring</h2>
 
