--- a/home/templates/home/connection.html
+++ b/home/templates/home/connection.html
@@ -51,7 +51,8 @@
     
             <!-- Additional Information: Network Name and Signal Strength -->
             <div class="mt-4">
-                <p class="text-sm text-gray-500 dark:text-gray-400">Network: <span class="font-medium text-gray-800 dark:text-gray-200">SKYW_8B18_5G</span></p>
+                <p class="text-sm text-gray-500 dark:text-gray-400">Network Name: <span class="font-medium text-gray-800 dark:text-gray-200">Airpollution</span></p>
+                <p class="text-sm text-gray-500 dark:text-gray-400">Password: <span class="font-medium text-gray-800 dark:text-gray-200">airpollution2025</span></p>
                 <p class="text-sm text-gray-500 dark:text-gray-400">Signal Strength: <span class="font-medium text-gray-800 dark:text-gray-200">Strong</span></p>
             </div>
         </div>
