--- a/home/templates/home/calibrate.html
+++ b/home/templates/home/calibrate.html
@@ -48,6 +48,9 @@
             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Sensor Calibration Instructions for AQI Monitoring:</h5>
             <ol class="max-w-md space-y-1 text-gray-500 list-decimal list-inside dark:text-gray-400">
                 <li>
+                    <span class="font-semibold text-gray-900 dark:text-white">Turn off the device and then turn it back on. The yellow-green LED will begin to glow, indicating that the calibration process is starting. Once the LED stops glowing, the calibration is finished.</span>
+                </li>
+                <li>
                     <span class="font-semibold text-gray-900 dark:text-white">Ensure the sensor is placed in a well-ventilated area</span> to avoid calibration errors. Avoid placing it in areas with high humidity or direct sunlight.
                 </li>
                 <li>
@@ -60,9 +63,6 @@
                     <span class="font-semibold text-gray-900 dark:text-white">Run a final verification test</span> with the sensor exposed to varying air quality conditions (clean, moderate, and polluted air) to ensure it is responsive across the full range of expected AQI levels.
                 </li>
             </ol>
-        </a>
-        <a href="#" class="block mt-4 max-w-md w-full p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-            <button type="button" class="text-white w-full bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Start Calibrations</button>
         </a>
     </div>
     
