--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -553,7 +553,7 @@
                                         text: "Warning: CO2 levels are too high!",
                                         duration: 10000,
                                         backgroundColor: "linear-gradient(to right, #ff5f6d, #ffc3a0)",
-                                        gravity: "top",
+                                        gravity: "bottom",
                                         position: "right",
                                         stopOnFocus: true,
                                         onClick: function() {}
@@ -596,7 +596,7 @@
                                         text: "Warning: CO levels are too high!",
                                         duration: 3000,
                                         backgroundColor: "linear-gradient(to right, #ff5f6d, #ffc3a0)",
-                                        gravity: "top",
+                                        gravity: "bottom",
                                         position: "right",
                                         stopOnFocus: true,
                                         onClick: function() {}
@@ -635,7 +635,7 @@
                                     text: "Warning: Ozone levels are too high!",
                                     duration: 10000,
                                     backgroundColor: "linear-gradient(to right, #ff5f6d, #ffc3a0)",
-                                    gravity: "top",
+                                    gravity: "bottom",
                                     position: "right",
                                     stopOnFocus: true,
                                     onClick: function() {}
@@ -670,7 +670,7 @@
                                     text: "Warning: PM2.5 levels are extremely high (Very Unhealthy)!",
                                     duration: 10000,
                                     backgroundColor: "linear-gradient(to right, #ff5f6d, #ffc3a0)",
-                                    gravity: "top",
+                                    gravity: "bottom",
                                     position: "right",
                                     stopOnFocus: true,
                                     onClick: function() {}
