--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -51,7 +51,7 @@
             
             <div class="mb-5">
                 <label for="username" class="block mb-2 text-sm font-medium text-gray-900">Your username</label>
-                <input type="text" id="username" name="username" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="johndoe" required />
+                <input type="text" id="username" name="username" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="" required />
             </div>
 
             <!-- Password Field -->
